@@ -1,4 +1,5 @@
 0.5.10
+ - fix: removed confusing wait-cursor during circle selection
  - tests: add complementary tests for upload queue and persistent job
    list
 0.5.9
